<!-- Copyright (C) 2023 Ido Ben-Hur

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name" translatable="false">YASR</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about"><![CDATA[
        Yet Another Sound Recorder (<b>YASR</b>)<br>
        Was developed by <a href=\'https://www.github.com/idoybh\'><b>Ido Ben-Hur</b></a> &copy;<br><br>
        <a href=\'https://raw.githubusercontent.com/idoybh/YASR/master/privacy_policy.txt\'>Privacy policy</a><br><br>
        Licensed by the <a href=\'https://www.apache.org/licenses/LICENSE-2.0.txt\'>Apache 2.0 license</a><br>
    ]]></string>
    <string name="about_mail" translatable="false">idoybh2@gmail.com</string>
    <string name="about_mail_title" translatable="false">YASR Support</string>
    <string name="about_github" translatable="false">https://www.github.com/idoybh/YASR</string>
    <string name="about_telegram" translatable="false">https://t.me/idoybh2</string>
    <string name="first_fragment_label" translatable="false">@string/app_name</string>
    <string name="record_fragment_label">Add a recording</string>
    <string name="text_name_label">File name</string>
    <string name="button_ok">OK</string>
    <string name="button_exit">Exit</string>
    <string name="service_notification_text">Audio recording in progress</string>
    <string name="out_selector_m4a" translatable="false">m4a</string>
    <string name="out_selector_ogg" translatable="false">ogg</string>
    <string name="out_selector_wav" translatable="false">wav</string>
    <string name="hd" translatable="false">HD</string>
    <string name="sd" translatable="false">SD</string>
    <string name="ld" translatable="false">LD</string>
    <string name="audio_device">Audio Device</string>
    <string name="stereo" translatable="false">2</string>
    <string name="mono" translatable="false">1</string>
    <string name="quality_txt">Quality:</string>
    <string name="output_txt">Format:</string>
    <string name="channels_txt">Channels:</string>
    <string name="limit_txt">Limit by:</string>
    <string name="unlimited_txt">Unlimited</string>
    <string name="unit_meters">m</string>
    <string name="unit_gb" translatable="false">GB</string>
    <string name="unit_mb" translatable="false">MB</string>
    <string name="unit_kb" translatable="false">kB</string>
    <string name="unit_seconds">s</string>
    <string name="info_txt" formatted="false">Sample rate: %.1f kHz | Depth: %d bit | Encoder: %s</string>
    <string name="info_txt_lossy">Lossy</string>
    <string name="info_txt_lossless">Lossless</string>
    <string name="permission_dialog_msg">The app needs the notification, files and microphone permissions to function properly</string>
    <string name="are_you_sure_msg">This action cannot be undone\nAre you sure?</string>
    <string name="are_you_sure_msg_mul">About to delete %d files\n</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="invalid_name">Invalid name</string>
    <string name="mic_in_use">Microphone is currently in use by a different app, waiting…</string>
    <string name="mic_in_use_timeout">Microphone is currently in use by a different app, giving up…</string>
    <string name="input_filter_hint">Filter</string>
    <string name="input_sort_hint">Sort by</string>
    <string name="play_progress_description">Current play progress</string>
    <string name="recording_list">recording list</string>

    <!-- tooltips -->
    <string name="tooltip_add_recording">New Recording</string>
    <string name="tooltip_delete_selection">Delete Selection</string>
    <string name="tooltip_share_selection">Share Selection</string>
    <string name="tooltip_save_selection">Save Selection</string>
    <string name="tooltip_toggle_selection_all">Select Everything</string>
    <string name="tooltip_toggle_selection_none">Clear Selection</string>
    <string name="tooltip_sort_order">Sort Order</string>
    <string name="tooltip_file_name">File name</string>
    <string name="tooltip_create_time">File creation time</string>
    <string name="tooltip_play_pause">Play / Pause</string>
    <string name="tooltip_select">Select</string>
    <string name="tooltip_save">Save</string>
    <string name="tooltip_share">Share</string>
    <string name="tooltip_delete">Delete</string>
    <string name="tooltip_duration">Progress / Duration</string>
    <string name="tooltip_file_type">File Type</string>
    <string name="tooltip_file_size">File Size</string>
    <string name="tooltip_input_noise">Input Indicator</string>
    <string name="tooltip_limit">Set Limit</string>
    <string name="tooltip_limit_size">Size</string>
    <string name="tooltip_limit_time">Time</string>
    <string name="tooltip_start_recording">Start Recording</string>
    <string name="tooltip_pause_recording">Pause Recording</string>
    <string name="tooltip_resume_recording">Resume Recording</string>
    <string name="tooltip_save_recording">Save Recording</string>
    <string name="tooltip_discard_recording">Discard Recording</string>
    <string name="tooltip_about_github">Source code on GitHub</string>
    <string name="tooltip_about_mail">Contact me via mail</string>
    <string name="tooltip_about_telegram">Contact me via Telegram</string>

    <!-- Preferences -->
    <string name="general_title">General</string>
    <string name="ui_mode_title">App Theme</string>
    <string name="sort_mode_title">Automatically sort by</string>
    <string name="lang_title">Language</string>
    <string name="lang_summary">Set the app\'s language</string>
    <string name="currently_selected_lang">Currently selected language</string>
    <string name="default_lang">System default</string>
    <string name="lang_restart_msg">This operation may require an app restart\nAre you sure?</string>
    <string name="analytics_title">Firebase Analytics</string>
    <string name="analytics_enabled_title">Participate</string>
    <string name="analytics_summary_on">Participate in anonymous basic analytics and crash reports</string>
    <string name="analytics_summary_off">Do not share any information :(</string>
    <string name="analytics_reset_title">Reset Analytics data</string>
    <string name="analytics_reset_summary" formatted="false">Change the app instance ID and erase yet to be uploaded logs\nCurrent ID: %s</string>
    <string name="analytics_reset_done">Analytics Data Reset</string>

    <!-- Array strings -->
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="disabled">Disabled</string>
    <string name="last_used">Last used</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system (default)</string>
</resources>
