<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2023 Ido Ben-Hur

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detailCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fileNameLayout"
                style="@style/Widget.App.TextInputLayout.Card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:textColorHint="?colorPrimary"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fileName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingStart="2dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="4dp"
                    android:text="Some recording name"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:tooltipText="@string/tooltip_file_name"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/createTimeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:text="01/01/1970 00:00"
                android:textSize="12sp"
                android:tooltipText="@string/tooltip_create_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_play_arrow_24"
                android:tooltipText="@string/tooltip_play_pause"
                android:contentDescription="@string/tooltip_play_pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fileNameLayout"
                app:tint="?attr/colorAccent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/playProgress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:valueFrom="0.0"
                android:valueTo="2147483647"
                android:contentDescription="@string/play_progress_description"
                app:labelBehavior="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/playButton"
                app:layout_constraintTop_toBottomOf="@+id/fileNameLayout"
                app:thumbRadius="8dp"
                app:trackHeight="3dp" />

            <ImageButton
                android:id="@+id/selectButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_checklist_24"
                android:tooltipText="@string/tooltip_select"
                android:contentDescription="@string/tooltip_select"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="?attr/colorAccent" />

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_save_24"
                android:tooltipText="@string/tooltip_save"
                android:contentDescription="@string/tooltip_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/selectButton"
                app:tint="?attr/colorAccent" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_share_24"
                android:tooltipText="@string/tooltip_share"
                android:contentDescription="@string/tooltip_share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveButton"
                app:tint="?attr/colorAccent" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_delete_forever_24"
                android:tooltipText="@string/tooltip_delete"
                android:contentDescription="@string/tooltip_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shareButton"
                app:tint="?attr/colorAccent" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="8dp"
                android:text="00:00/00:00"
                android:tooltipText="@string/tooltip_duration"
                android:contentDescription="@string/tooltip_duration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/typeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="3GP"
                android:tooltipText="@string/tooltip_file_type"
                android:contentDescription="@string/tooltip_file_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/deleteButton"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/sizeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="50MB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/typeTxt"
                android:tooltipText="@string/tooltip_file_size"
                android:contentDescription="@string/tooltip_file_size"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>