<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2023 Ido Ben-Hur

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintVertical_chainStyle="packed">
    <TextView
        android:id="@+id/msgTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColorLink="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/githubButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tooltip_about_github"
        android:tooltipText="@string/tooltip_about_github"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/github_mark"
        app:layout_constraintEnd_toStartOf="@+id/mailButton"
        app:layout_constraintTop_toBottomOf="@id/msgTxt" />

    <ImageButton
        android:id="@+id/mailButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tooltip_about_mail"
        android:tooltipText="@string/tooltip_about_mail"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msgTxt" />

    <ImageButton
        android:id="@+id/telegramButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tooltip_about_telegram"
        android:tooltipText="@string/tooltip_about_telegram"
        android:scaleType="fitCenter"
        android:src="@drawable/telegram_mark"
        app:layout_constraintStart_toEndOf="@+id/mailButton"
        app:layout_constraintTop_toBottomOf="@id/msgTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>